argocd/nextcloud/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: nextcloud-app
  name: nextcloud-httproute
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Nextcloud
    gethomepage.dev/icon: nextcloud
    gethomepage.dev/description: "Nextcloud is a suite of client-server software for\
      \ creating and using file hosting services."
    gethomepage.dev/pod-selector: app.kubernetes.io/name=nextcloud
spec:
  parentRefs:
    - name: cilium-public-gateway
      namespace: cilium
      sectionName: https
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - nextcloud.yanello.net
  rules:
    - backendRefs:
        - name: nextcloud
          namespace: nextcloud
          port: 8080
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: max-age=15552000; includeSubDomains;
